--- a/public/css/chatify/style.css
+++ b/public/css/chatify/style.css
@@ -112,7 +112,7 @@ body {
   background-color: #252525!important;
   padding: 3px 10px;
   border-radius: 6px;
-  
+
   outline: none; */
 }
 
@@ -381,8 +381,8 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  border: 1px solid #00ADEA;
-  border-radius: 7px;
+  /*border: 1px solid #00ADEA;*/
+  /*border-radius: 7px;*/
 }
 .messenger-sendCard form {
   width: 100%;
@@ -395,8 +395,8 @@ body {
 .messenger-sendCard button,
 .messenger-sendCard button:active,
 .messenger-sendCard button:focus {
- 
-  
+
+
   background: none;
   padding: 0;
   margin: 0;
