--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1177,9 +1177,6 @@ select {
 .h-screen {
   height: 100vh;
 }
-.h-64 {
-  height: 16rem;
-}
 .h-48 {
   height: 12rem;
 }
@@ -1189,8 +1186,14 @@ select {
 .h-96 {
   height: 24rem;
 }
+.h-\[600px\] {
+  height: 600px;
+}
 .max-h-60 {
   max-height: 15rem;
+}
+.max-h-\[800px\] {
+  max-height: 800px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1258,6 +1261,12 @@ select {
 .w-24 {
   width: 6rem;
 }
+.w-\[430px\] {
+  width: 430px;
+}
+.w-screen {
+  width: 100vw;
+}
 .min-w-0 {
   min-width: 0px;
 }
@@ -1276,11 +1285,11 @@ select {
 .max-w-lg {
   max-width: 32rem;
 }
-.max-w-4xl {
-  max-width: 56rem;
-}
 .max-w-5xl {
   max-width: 64rem;
+}
+.max-w-4xl {
+  max-width: 56rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1404,6 +1413,9 @@ select {
 }
 .gap-5 {
   gap: 1.25rem;
+}
+.gap-2 {
+  gap: 0.5rem;
 }
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
@@ -1647,9 +1659,9 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(254 243 199 / var(--tw-bg-opacity));
 }
-.bg-blue-800 {
+.bg-\[\#000016\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
+  background-color: rgb(0 0 22 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
@@ -1669,9 +1681,16 @@ select {
 .fill-blue-900 {
   fill: #1e3a8a;
 }
+.fill-\[\#000016\] {
+  fill: #000016;
+}
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 .p-2 {
   padding: 0.5rem;
@@ -1840,9 +1859,6 @@ select {
 }
 .pt-10 {
   padding-top: 2.5rem;
-}
-.pl-9 {
-  padding-left: 2.25rem;
 }
 .pl-\[350px\] {
   padding-left: 350px;
@@ -2236,6 +2252,10 @@ body {
 .hover\:text-indigo-500:hover {
   --tw-text-opacity: 1;
   color: rgb(99 102 241 / var(--tw-text-opacity));
+}
+.hover\:text-blue-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 .focus\:z-10:focus {
   z-index: 10;
